--- a/_static/custom.css
+++ b/_static/custom.css
@@ -7,7 +7,7 @@ body {
 	background-color: rgb(171, 183, 190);
 */
 
-	background: rgb(171, 183, 190) url(back_pattern.png) repeat-x;
+	background: rgb(171, 183, 190) url(back_pattern.png) repeat-x fixed;
 
 	border-color: rgb(92, 92, 92);
 	border-top: none;
