--- a/_doc_source/source/_static/custom.css
+++ b/_doc_source/source/_static/custom.css
@@ -3,12 +3,7 @@ a {
 }
 
 body {
-/*
-	background-color: rgb(171, 183, 190);
-*/
-
 	background: rgb(171, 183, 190) url(back_pattern.png) repeat-x fixed;
-
 	border-color: rgb(92, 92, 92);
 	border-top: none;
     font-family: Avenir, "Helvetica Neue", Helvetica, 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', sans-serif;
@@ -54,7 +49,6 @@ div.sphinxsidebarwrapper #downloadrepo a:active {
     color: #330000;
 }
 
-
 div.sphinxsidebarwrapper h3,
 div.sphinxsidebarwrapper h4 {
 	border-radius: 3px;
@@ -95,6 +89,15 @@ div.sphinxsidebarwrapper #downloadrepo {
 }
 
 pre {
-	border-color: #e5e5e5;
+	border-color: #fff;
 	border-radius: 5px;
+	-moz-box-shadow:    inset 3px 3px 6px rgb(202, 202, 202);
+	-webkit-box-shadow: inset 3px 3px 6px rgb(202, 202, 202);
+	box-shadow:         inset 3px 3px 6px rgb(202, 202, 202);
+	padding: 1.0em;
+}
+
+div.section h2,
+div.section h3 {
+	color: #333;
 }
